fix spacing

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ p {
   line-height: 1.8em;
   font-size: .8em;
   text-align: center;
-  margin-top: 10em;
+  margin-top: 5em;
 }
 
 #attribution > * {
